# points_cloud_homework

./: .gitignore
homework1/src/: off_to_ply.py  pca_normal.py  voxel_filter.py
homework2/: bst.py
homework3/: PointCloudHomeworkIII.rar
homework3/src/: KMeans.py  compare_cluster.py
homework4/: C2xslittlegrass.rar  clustering.py  优秀作业参考C4王海川.rar
homework4/C4/: README.md  clustering.py
homework4/C4/ransac/: CMakeLists.txt  README.md  point_cloud.cpp
homework5/src/: base_module.py  datasets.py  model.py  pointnet_cls.py  preprocess.py  train.py
